# rust-os

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
scripts/: linker.ld  make_image.sh  make_image_and_run.sh
src/: boot.s  lib.rs  main.rs  multiboot_header.s  vga_buffer.rs
src/bootloader/: boot.s  long_mode.s
